--- a/index.Rmd
+++ b/index.Rmd
@@ -128,7 +128,7 @@ hist5 <-  ggplot(data) +
     fill = "#ffcc00"
   ) +
   ggtitle("Irradiación solar") +
-  xlab("Irradación solar (W / m2)") +
+  xlab("Irradiación solar (W / m2)") +
   ylab("Frecuencia") +
   theme_ipsum()
 
@@ -184,7 +184,7 @@ graph1 <- ggplot(monthly_data, aes(x = mes, y = prom_temp, group = 1)) +
   geom_point(size = 2, colour = "#cc3300") +
   ggtitle('Temperatura mensual promedio') +
   xlab('Mes') + 
-  ylab('°C, grados Celsius') +
+  ylab('Temperartura (°C, grados Celsius)') +
   theme_ipsum()
 
 graph2 <- ggplot(monthly_data, aes(x = mes, y = prom_hum, group = 1)) + 
@@ -200,7 +200,7 @@ graph3 <- ggplot(monthly_data, aes(x = mes, y = prom_vel, group = 1)) +
   geom_point(size = 2, colour = "#6666cc") +
   ggtitle('Velocidad del viento mensual promedio') +
   xlab('Mes') + 
-  ylab('m/s') +
+  ylab('Velocidad (m/s)') +
   theme_ipsum()
 
 graph4 <- ggplot(monthly_data, aes(x = mes, y = suma_lluvia, group = 1)) + 
@@ -262,8 +262,8 @@ scatter2 <- ggplot(data, aes(x = Temperatura, group = 1)) +
 # 3. Humedad relativa y lluvia: ¿cuánta lluvia se queda en el ambiente?
 scatter3 <- ggplot(data, aes(x = Humedad, group = 1)) + 
   geom_point(aes(y = Lluvia), colour = "#0099cc") +
-  ggtitle('Humedad en función de la lluvia') +
-  xlab('Temperatura (°C)') + 
+  ggtitle('Humedad relativa en función de la precipitación') +
+  xlab('Humedad relativa (%)') + 
   ylab('Precipitación (mm)') +
   theme_ipsum()
 
